# midi2uge

./: .gitignore  CMakeLists.txt  README.md  uge-format.md
src/: main.cpp  midi2json.cpp  midi2uge.cpp  midi2uge.h  uge2json.cpp  uge_writer.cpp  uge_writer.h
